measure similarity runtimes for true sims

--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,27 +2,26 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Importing nescessary modules\n",
         "import os, sys\n",
         "import shutil\n",
-        "import pandas as pd\n",
         "\n",
         "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
         "parentdir = os.path.dirname(currentdir)\n",
         "sys.path.append(parentdir)\n",
         "\n",
-        "from utils.similarity_measures import dtw\n",
         "from utils.helpers import file_handler as fh\n",
-        "from utils.helpers import metafile_handler as mfh"
+        "from utils.helpers import metafile_handler as mfh\n",
+        "from utils.similarity_measures import dtw"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -36,7 +35,7 @@
         "\n",
         "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
         "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-1000.txt\"\n",
+        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-500.txt\"\n",
         "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
         "DTW_FILENAME_PORTO = \"porto-dtw-fullset.csv\"\n",
         "DTW_FILENAME_TEST_PORTO = \"porto-dtw-testset.csv\"\n",
@@ -51,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,28 +108,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 13\u001b[0m\n\u001b[1;32m      7\u001b[0m generate_parallell_dtw_similarities(\n\u001b[1;32m      8\u001b[0m     DATA_ROME, TEST_SET_ROME, DTW_FILENAME_TEST_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n\u001b[1;32m      9\u001b[0m )\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Full set\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# generate_dtw_similarities(DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mgenerate_parallell_dtw_similarities\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mDATA_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFULL_SET_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTW_FILENAME_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSIMILARITIES_OUTPUT_FOLDER_ROME\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m)\u001b[49m\n",
-            "Cell \u001b[0;32mIn[4], line 25\u001b[0m, in \u001b[0;36mgenerate_parallell_dtw_similarities\u001b[0;34m(data_folder, meta_file, file_name, similarities_output_folder)\u001b[0m\n\u001b[1;32m     22\u001b[0m files \u001b[38;5;241m=\u001b[39m mfh\u001b[38;5;241m.\u001b[39mread_meta_file(meta_file)\n\u001b[1;32m     23\u001b[0m trajectories \u001b[38;5;241m=\u001b[39m fh\u001b[38;5;241m.\u001b[39mload_trajectory_files(files, data_folder)\n\u001b[0;32m---> 25\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdtw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcy_dtw_pool\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrajectories\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(similarities_output_folder, file_name))\n",
-            "File \u001b[0;32m~/Documents/skole/H23/prosjektoppgave/prosjektoppgave/utils/similarity_measures/dtw.py:126\u001b[0m, in \u001b[0;36mcy_dtw_pool\u001b[0;34m(trajectories)\u001b[0m\n\u001b[1;32m    122\u001b[0m pool \u001b[38;5;241m=\u001b[39m Pool(\u001b[38;5;241m12\u001b[39m)\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, traj_i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sorted_trajectories\u001b[38;5;241m.\u001b[39mkeys()):\n\u001b[0;32m--> 126\u001b[0m     dtw_elements \u001b[38;5;241m=\u001b[39m \u001b[43mpool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_fun_wrapper\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtraj_i\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtraj_j\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraj_j\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m dtw_elements:\n\u001b[1;32m    129\u001b[0m         M[i,element[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m=\u001b[39m element[\u001b[38;5;241m0\u001b[39m]\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:367\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, iterable, chunksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    363\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[38;5;124;03m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    365\u001b[0m \u001b[38;5;124;03m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    366\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m--> 367\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapstar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    769\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_event\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/threading.py:629\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    627\u001b[0m signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_flag\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 629\u001b[0m     signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cond\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    630\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/threading.py:327\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    325\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 327\u001b[0m         \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    328\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    329\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# DTW similarities for Rome\n",
         "\n",
@@ -158,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,20 +150,20 @@
         "#     DTW_FILENAME_TEST_PORTO,\n",
         "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
         "# )\n",
-        "generate_parallell_dtw_similarities(\n",
-        "    DATA_PORTO,\n",
-        "    TEST_SET_PORTO,\n",
-        "    DTW_FILENAME_TEST_PORTO,\n",
-        "    SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
-        ")\n",
+        "# generate_parallell_dtw_similarities(\n",
+        "#     DATA_PORTO,\n",
+        "#     TEST_SET_PORTO,\n",
+        "#     DTW_FILENAME_TEST_PORTO,\n",
+        "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
+        "# )\n",
         "\n",
         "# Full set\n",
-        "# generate_dtw_similarities(\n",
-        "#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
-        "# )\n",
-        "generate_parallell_dtw_similarities(\n",
+        "generate_dtw_similarities(\n",
         "    DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
-        ")"
+        ")\n",
+        "# generate_parallell_dtw_similarities(\n",
+        "#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+        "# )"
       ]
     },
     {
@@ -220,174 +200,6 @@
         "    DTW_FILENAME_KOLUMBUS,\n",
         "    SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS,\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Time measurement\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def romeSet(file_size: int) -> str:\n",
-        "    return f\"../dataset/rome/output/META-{file_size}.txt\"\n",
-        "\n",
-        "\n",
-        "def portoSet(file_size: int) -> str:\n",
-        "    return f\"../dataset/porto/output/META-{file_size}.txt\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Time Efficiency\n",
-        "from multiprocessing import Pool\n",
-        "\n",
-        "# Using Python, for measuring computation time fairly against the hash computations\n",
-        "\n",
-        "sim = {\n",
-        "    \"dtw_py\": dtw.measure_py_dtw,\n",
-        "    # \"frechet_py\" : frechet.measure_py_frechet,\n",
-        "    \"dtw_cy\": dtw.measure_cy_dtw,\n",
-        "    # \"frechet_cy\" : frechet.measure_cy_frechet\n",
-        "}\n",
-        "\n",
-        "\n",
-        "def measure_similarities(\n",
-        "    measure: str, data_folder: str, meta_file: str, parallell_jobs: int = 10\n",
-        "):\n",
-        "    \"\"\"Common method for measuring the efficiency of the similarity algorithms\"\"\"\n",
-        "    files = mfh.read_meta_file(meta_file)\n",
-        "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
-        "\n",
-        "    with Pool() as pool:\n",
-        "        result = pool.map(sim[measure], [[trajectories, 1, 1]\n",
-        "                          for _ in range(parallell_jobs)])\n",
-        "    return result"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[[9.356949],\n",
-              " [9.328117],\n",
-              " [9.403735999999999],\n",
-              " [9.539724999999999],\n",
-              " [9.483839000000001],\n",
-              " [9.345093],\n",
-              " [9.330691999999999],\n",
-              " [9.372648],\n",
-              " [9.455914],\n",
-              " [9.368394]]"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "measure_similarities(\"dtw_py\", DATA_PORTO, portoSet(50))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[[0.22312199999999982],\n",
-              " [0.23503300000000005],\n",
-              " [0.233209],\n",
-              " [0.599933],\n",
-              " [0.23094000000000015],\n",
-              " [0.23600700000000008],\n",
-              " [0.23036599999999985],\n",
-              " [0.22592800000000013],\n",
-              " [0.23430499999999999],\n",
-              " [0.23207]]"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "measure_similarities(\"dtw_cy\", DATA_PORTO, portoSet(50))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Computing size 200\r"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "20"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Measuring the computation times of true similarities\n",
-        "\n",
-        "runs = 10\n",
-        "data_sets = range(200, 201, 100)\n",
-        "output_folder = \"../benchmarks/similarities_runtimes/\"\n",
-        "file_name = \"similarity_runtimes_true_dtw_porto_200.csv\"\n",
-        "\n",
-        "df = pd.DataFrame(\n",
-        "    index=[f\"run_{x+1}\" for x in range(runs)], columns=[x for x in data_sets]\n",
-        ")\n",
-        "\n",
-        "for size in data_sets:\n",
-        "    print(f\"Computing size {size}\", end=\"\\r\")\n",
-        "    execution_times = measure_similarities(\n",
-        "        \"dtw_py\", DATA_ROME, romeSet(size), parallell_jobs=runs\n",
-        "    )\n",
-        "    df[size] = [element[0] for element in execution_times]\n",
-        "\n",
-        "df.to_csv(os.path.join(output_folder, file_name))\n",
-        "df\n",
-        "of = pd.read_csv(\n",
-        "    \"../benchmarks/similarities_runtimes/similarity_runtimes_true_dtw_porto.csv\", index_col=0\n",
-        ")\n",
-        "f1 = pd.read_csv(\n",
-        "    \"../benchmarks/similarities_runtimes/similarity_runtimes_true_dtw_porto_200.csv\",\n",
-        "    index_col=0,\n",
-        ")\n",
-        "\n",
-        "of[\"200\"] = f1[\"200\"]\n",
-        "\n",
-        "of.to_csv(\"../benchmarks/similarities_runtimes/similarity_runtimes_true_dtw_porto.csv\")"
       ]
     }
   ],
