explicit sizing for datasets files (#8)
* set number of trajectories for benchmarks and csv name retrieval

* tmp: retrieve 10th coordinate from kolumbus trajectories

* create true sim sets for dtw 50 (testset) and 500

* add true sim for 50 and 500 trajectories for frechet to porto and rome

* dont skip coordinates for trajectories in kolumbus set

* add truesim for kolumbus frechet 500

* cleanup

* find dtw correlation for grid for all datasets with size 500

* find dtw correlation for disk for all datasets with size 500

--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -22,36 +22,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_ROME, NUMBER_OF_TRAJECTORIES\n",
+        "\n",
         "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
         "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-500.txt\"\n",
+        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
         "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
-        "DTW_FILENAME_ROME = \"rome-dtw-fullset.csv\"\n",
-        "DTW_FILENAME_TEST_ROME = \"rome-dtw-testset.csv\"\n",
+        "DTW_FILENAME_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "DTW_FILENAME_TEST_ROME = \"rome-dtw-50.csv\"\n",
         "\n",
         "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
         "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-1000.txt\"\n",
+        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
         "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
-        "DTW_FILENAME_PORTO = \"porto-dtw-fullset.csv\"\n",
-        "DTW_FILENAME_TEST_PORTO = \"porto-dtw-testset.csv\"\n",
+        "DTW_FILENAME_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "DTW_FILENAME_TEST_PORTO = \"porto-dtw-50.csv\"\n",
         "\n",
         "DATA_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/\"\n",
         "TEST_SET_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-1000.txt\"\n",
+        "FULL_SET_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
         "SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS = f\"../{SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS}/\"\n",
-        "DTW_FILENAME_KOLUMBUS = \"../kolumbus-dtw-fullset.csv\"\n",
-        "DTW_FILENAME_TEST_KOLUMBUS = \"../kolumbus-dtw-testset.csv\""
+        "DTW_FILENAME_KOLUMBUS = f\"../kolumbus-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
+        "DTW_FILENAME_TEST_KOLUMBUS = \"../kolumbus-dtw-50.csv\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -111,26 +112,7 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 13\u001b[0m\n\u001b[1;32m      7\u001b[0m generate_parallell_dtw_similarities(\n\u001b[1;32m      8\u001b[0m     DATA_ROME, TEST_SET_ROME, DTW_FILENAME_TEST_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n\u001b[1;32m      9\u001b[0m )\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Full set\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# generate_dtw_similarities(DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mgenerate_parallell_dtw_similarities\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mDATA_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFULL_SET_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTW_FILENAME_ROME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSIMILARITIES_OUTPUT_FOLDER_ROME\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m)\u001b[49m\n",
-            "Cell \u001b[0;32mIn[4], line 25\u001b[0m, in \u001b[0;36mgenerate_parallell_dtw_similarities\u001b[0;34m(data_folder, meta_file, file_name, similarities_output_folder)\u001b[0m\n\u001b[1;32m     22\u001b[0m files \u001b[38;5;241m=\u001b[39m mfh\u001b[38;5;241m.\u001b[39mread_meta_file(meta_file)\n\u001b[1;32m     23\u001b[0m trajectories \u001b[38;5;241m=\u001b[39m fh\u001b[38;5;241m.\u001b[39mload_trajectory_files(files, data_folder)\n\u001b[0;32m---> 25\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdtw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcy_dtw_pool\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrajectories\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(similarities_output_folder, file_name))\n",
-            "File \u001b[0;32m~/Documents/skole/H23/prosjektoppgave/prosjektoppgave/utils/similarity_measures/dtw.py:126\u001b[0m, in \u001b[0;36mcy_dtw_pool\u001b[0;34m(trajectories)\u001b[0m\n\u001b[1;32m    122\u001b[0m pool \u001b[38;5;241m=\u001b[39m Pool(\u001b[38;5;241m12\u001b[39m)\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, traj_i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sorted_trajectories\u001b[38;5;241m.\u001b[39mkeys()):\n\u001b[0;32m--> 126\u001b[0m     dtw_elements \u001b[38;5;241m=\u001b[39m \u001b[43mpool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_fun_wrapper\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtraj_i\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtraj_j\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraj_j\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msorted_trajectories\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m dtw_elements:\n\u001b[1;32m    129\u001b[0m         M[i,element[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m=\u001b[39m element[\u001b[38;5;241m0\u001b[39m]\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:367\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, iterable, chunksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    363\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[38;5;124;03m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    365\u001b[0m \u001b[38;5;124;03m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    366\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m--> 367\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapstar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    769\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_event\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/threading.py:629\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    627\u001b[0m signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_flag\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 629\u001b[0m     signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cond\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    630\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.11-dev/lib/python3.11/threading.py:327\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    325\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 327\u001b[0m         \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    328\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    329\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# DTW similarities for Rome\n",
         "\n",
@@ -158,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -231,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -245,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,25 +259,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[[9.356949],\n",
-              " [9.328117],\n",
-              " [9.403735999999999],\n",
-              " [9.539724999999999],\n",
-              " [9.483839000000001],\n",
-              " [9.345093],\n",
-              " [9.330691999999999],\n",
-              " [9.372648],\n",
-              " [9.455914],\n",
-              " [9.368394]]"
+              "[[8.247053],\n",
+              " [8.037764000000001],\n",
+              " [8.123517000000001],\n",
+              " [8.217421000000002],\n",
+              " [8.054786],\n",
+              " [8.066933],\n",
+              " [8.05183],\n",
+              " [8.594024],\n",
+              " [8.228824999999999],\n",
+              " [7.96889]]"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -306,25 +288,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[[0.22312199999999982],\n",
-              " [0.23503300000000005],\n",
-              " [0.233209],\n",
-              " [0.599933],\n",
-              " [0.23094000000000015],\n",
-              " [0.23600700000000008],\n",
-              " [0.23036599999999985],\n",
-              " [0.22592800000000013],\n",
-              " [0.23430499999999999],\n",
-              " [0.23207]]"
+              "[[0.39924800000000005],\n",
+              " [0.19247100000000006],\n",
+              " [0.18231700000000006],\n",
+              " [0.18209399999999998],\n",
+              " [0.16656500000000007],\n",
+              " [0.1754070000000001],\n",
+              " [0.1780870000000001],\n",
+              " [0.17242499999999983],\n",
+              " [0.18212300000000003],\n",
+              " [0.17462500000000003]]"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -335,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -344,16 +326,6 @@
           "text": [
             "Computing size 200\r"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "20"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -407,7 +379,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6+"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
