figure for run times

--- a/benchmarks/measure_true_sim_runtimes.ipynb
+++ b/benchmarks/measure_true_sim_runtimes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "data_end_size 300\n",
+      "data sets range(100, 301, 100)\n",
       "Computing true_dtw_cy for porto with 1 jobs\n",
-      "             500        600\n",
-      "run_1  21.436823  30.260791\n"
+      "           100       200       300\n",
+      "run_1  1.24249  3.403208  7.955971\n"
      ]
     }
    ],
@@ -49,9 +51,9 @@
     "\n",
     "measure=\"true_dtw_cy\"\n",
     "city=\"porto\"\n",
-    "parallel_jobs = 10\n",
-    "data_start_size = 500\n",
-    "data_end_size = 600 + 1\n",
+    "parallel_jobs = 1\n",
+    "data_start_size = 100\n",
+    "data_end_size = 500\n",
     "data_step_size = 100\n",
     "\n",
     "compute_true_similarity_runtimes(measure=measure, city=city, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
