--- a/hashed_similarities/measure_hashed_sim_runtimes.ipynb
+++ b/hashed_similarities/measure_hashed_sim_runtimes.ipynb
@@ -45,17 +45,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing grid_frechet_cy for porto with 2 jobs\n",
-      "Computing size 100, set 1/2\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            100        2002\n",
-      "run_1  8.189140  27.053445\n",
-      "run_2  8.381534  27.916408\n"
+      "Computing grid_dtw_cy for porto with 5 jobs\n",
+      "            100       200       300       400       500\n",
+      "run_1  0.153158  0.605071  1.295102  2.309179  3.492663\n",
+      "run_2  0.145902  0.588271  1.336958  2.226940  3.595378\n",
+      "run_3  0.146391  0.563510  1.339752  2.232648  3.589008\n",
+      "run_4  0.212220  0.580201  1.339176  2.356759  3.505701\n",
+      "run_5  0.146280  0.559115  1.291246  2.298517  3.473409\n"
      ]
     }
    ],
@@ -66,9 +62,9 @@
     "city=\"porto\"\n",
     "res=0.5\n",
     "layers=4\n",
-    "parallel_jobs = 10\n",
+    "parallel_jobs = 5\n",
     "data_start_size = 100\n",
-    "data_end_size = 200 + 1\n",
+    "data_end_size = 500\n",
     "data_step_size = 100\n",
     "\n",
     "compute_grid_similarity_runtimes(measure=measure, city=city, res=res, layers=layers, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
@@ -97,10 +93,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing disk_frechet_cy for porto with 2 jobs\n",
-      "            100       200/2\n",
-      "run_1  0.583324  3.817837\n",
-      "run_2  0.663818  3.848540\n"
+      "Computing disk_dtw_cy for porto with 5 jobs\n",
+      "            100       200       300       400       500\n",
+      "run_1  0.062911  0.287202  0.516578  1.185704  1.566689\n",
+      "run_2  0.092977  0.237542  0.484097  1.071445  1.560364\n",
+      "run_3  0.071223  0.231594  0.487469  1.128040  1.562155\n",
+      "run_4  0.105433  0.233696  0.497933  1.141500  1.559377\n",
+      "run_5  0.118187  0.229757  0.485707  1.130927  1.572263\n"
      ]
     }
    ],
@@ -112,9 +111,9 @@
     "diameter=0.5\n",
     "layers=4\n",
     "disks=100\n",
-    "parallel_jobs = 10\n",
+    "parallel_jobs = 5\n",
     "data_start_size = 100\n",
-    "data_end_size = 200 + 1\n",
+    "data_end_size = 500\n",
     "data_step_size = 100\n",
     "\n",
     "compute_disk_similarity_runtimes(measure=measure, city=city, diameter=diameter, layers=layers, disks=disks, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
